Added GitHub project button

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
   </nav>
   <!-- Hero Section -->
   <section class="hero" id="home">
-    <img src="images/hero-img2.jpg" alt="Sobia Liaqat" class="hero-img">
+    <img src="images/Capturess.png" alt="Sobia Liaqat" class="hero-img">
     <h1>Sobia Liaqat<br>
       <span>Web Developer & Designer| WordPress </span>
     </h1>
@@ -683,24 +683,23 @@
           <a href="#"><i class="fa-brands fa-twitter"></i></a>
           <a href="#"><i class="fa-brands fa-facebook"></i></a>
           <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/sobialiaqat/"><i class="fa-brands fa-linkedin"></i></a>
         </div>
       </div>
 
       <!-- ✅ Working Contact Form via FormSubmit -->
-      <form class="contact-form" action="https://formsubmit.co/sobialiaqatvu2@gmail.com" method="POST">
-        <!-- Anti-spam and formatting -->
-        <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_template" value="table">
-        <!-- Optional redirect after submit -->
-        <!-- <input type="hidden" name="_next" value="https://yourdomain.com/thank-you.html"> -->
+<form class="contact-form" action="https://formsubmit.co/sobialiaqatvu2@gmail.com" method="POST">
+  <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_template" value="table">
+  <input type="hidden" name="_autoresponse" value="Thank you for contacting me. I’ll get back to you soon!">
 
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <input type="text" name="subject" placeholder="Subject" required>
-        <textarea name="message" rows="5" placeholder="Message" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="email" name="email" placeholder="Your Email" required>
+  <input type="text" name="subject" placeholder="Subject" required>
+  <textarea name="message" rows="5" placeholder="Message" required></textarea>
+  <button type="submit">Send Message</button>
+</form>
+
     </div>
   </div>
 </section>
