--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@ const CARTOONS = [
     id: 2,
     name: "Shrek",
     cat: "comedy fantasy adventure",
-    img: "https://static.wikia.nocookie.net/ultimatepopculture/images/3/39/Shrek.jpg/revision/latest/scale-to-width-down/220?cb=20210311141139",
+    img: "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTG_q0A0cypAsXxYlgs5J_554BrcnjeeKExlQE3ZaZUuPYv0fUd",
     desc: "An ogre, a donkey, and a princess—unforgettable fairy tale fun.",
     rating: 5,
     badge: "Family Favorite",
